kubernetes/mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: urthehero
  labels:
    name: urthehero
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: urthehero
  labels:
    app: urthehero
spec:
  ports:
    - port: 3306
  selector:
    app: urthehero
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: urthehero
  labels:
    app: urthehero
spec:
  selector:
    matchLabels:
      app: urthehero
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: urthehero
        tier: mysql
    spec:
      containers:
        - image: mysql:8.0.19
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
