kubernetes/ingress-urthehero.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-urthehero
spec:
  backend:
    serviceName: urthehero-back
    servicePort: 8083
